changes in the projects authentication, ferias and agenda. Add new escala project